--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -6,12 +6,18 @@
 /// @group button
 ////
 
+//colors:
+$yellow: #FBF18E;
+$accent: #F61067;
+$grey: #666666;
+
+
 /// Padding inside buttons at various sizes.
 /// @type Map
 $button-padding: (
   tiny: 4px 8px 4px 8px,
   small: 5px 10px 5px 10px,
-  default: 8px 16px 8px 16px,
+  default: 12px 35px 12px 35px,
   large: 10px 20px 10px 20px,
 ) !default;
 
@@ -42,11 +48,11 @@ $button-margin: 0 0 $global-margin 0 !default;
 
 /// Background color of buttons.
 /// @type Color
-$button-background: $primary-color !default;
+$button-background: transparent !default;
 
 /// Border around buttons.
 /// @type Border
-$button-border: 2px solid $button-background !default;
+$button-border: 2px solid $accent !default;
 
 /// Border radius of buttons. Not supported by all email clients.
 /// @type Number
@@ -66,11 +72,11 @@ table.button {
     td {
       text-align: left;
       color: $button-color;
-      background: $button-background;
-      border: 2px solid $button-background;
+      background: transparent;
+      border: 2px solid $accent;
 
       &.radius {
-        border-radius: $button-radius;
+        border-radius: 0;
       }
 
       &.rounded {
