--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,53 @@
 @import "foundation";
 
-//colors:
-$yellow: #FBF18E;
-$accent: #F61067;
-$grey: #666666;
+.no-bg {
+    background: transparent !important;
+}
+
+.tiny-text {
+    font-size: 12px;
+}
+
+.text-uppercase {
+    text-transform: uppercase;
+}
+
+.basic-link {
+    text-decoration: underline;
+    color: #000;
+}
+
+.main-sub-heading {
+    color: $grey;
+    text-transform: uppercase;
+    margin: 0;
+    font-size: 20
+}
+
+.main-heading {
+    text-transform: uppercase;
+    margin: 0;
+    font-size: 22px;
+}
+
+.main-body-p {
+    line-height: (22/14);
+    color: $grey;
+}
+.decorative-line {
+    background: $grey;
+    height: 2px;
+}
+
+.custom-p-b {
+    padding-bottom: 10px !important;
+}
+
+.item-name {
+    text-transform: uppercase;
+    color: $accent;
+}
+
+.item-price {
+    color: $grey;
+}
