--- a/templates/basic.html
+++ b/templates/basic.html
@@ -20,5 +20,119 @@
     
     shorts: https://gallery.mailchimp.com/b6b8c26ff97a7240ec68e5e4b/images/bbcf016c-f597-4d1a-976b-1577e79767b4.jpg
     -->
+    
+    <table class="body">
+        <tr>
+            <td>
+                <center>
+                    
+                  <spacer size="15"></spacer>
+                  <container class="no-bg">
+                      <row>
+                          <columns large="6" class=" custom-p-b">
+                              <p class="tiny-text small-text-center">
+                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda vitae optio repudiandae doloremque ea earum minima temporibus doloribus quidem error voluptate odio, ut architecto, quisquam necessitatibus velit neque illum reiciendis!
+                              </p>
+                          </columns>
+                          <columns large="6">
+                              <p class="text-right small-text-center custom-p-b">
+                                  <a href="#" class="tiny-text basic-link small-text-center">
+                                    View this email in your browser!
+                                  </a>
+                              </p>
+                          </columns>
+                      </row>
+                  </container>
+                    
+                  <table>
+                      <tbody>
+                          <tr>
+                              <td>
+                                  <img src="https://gallery.mailchimp.com/b6b8c26ff97a7240ec68e5e4b/images/68bac409-eb07-449d-aa4e-02f4d20ea883.jpg" alt=" img1">
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+                             
+                  <spacer size="15px"></spacer>
+                  <container>
+                      <row>
+                          <columns>
+                              <spacer size="40px"></spacer>
+                              <p class=" main-sub-heading text-center small-text-center">Meet the</p>
+                              <h1 class="main-heading text-center small-text-center">
+                                  Lorem collection
+                              </h1>
+                              <spacer size="30px"></spacer>
+                              <p class="main-body-p small-text-center">
+                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, beatae? Quis perspiciatis possimus similique explicabo, aliquid, aspernatur, eum culpa ab ipsam illo eos quos laudantium, illum. Nobis, quae excepturi nihil! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quos minus omnis nesciunt eaque distinctio.
+                              </p>
+                              <spacer size="30"></spacer>
+                              <center>
+                                  <button href="#">Shop now</button>
+                              </center>
+                          </columns>
+                      </row>
+                  </container>
+                          
+                  <spacer size="15"></spacer>    
+                  
+                  <container>
+                      <row>
+                          <columns class="custom-p-b">
+                             <spacer size="40"></spacer>
+                              <h2 class="text-center text-uppercase small-text-center">Deals of the week</h2>
+                          </columns>
+                      </row>
+                      <row>
+                          <columns small="4" large="5"></columns>
+                          <columns small="4" large="2">
+                              <div class="decorative-line"></div>
+                          </columns>
+                          <columns small="4" large="5"></columns>
+                      </row>
+                      <row>
+                          <columns large="4">
+                              <center>
+                                  <img src="https://gallery.mailchimp.com/b6b8c26ff97a7240ec68e5e4b/images/6a9e9bff-ccfe-486c-86c4-923cf2a2f32b.jpg" alt="item1">
+                                  <h3 class="item-name small-text-center">Item Name</h3>
+                                  <p class="item-price small-text-center">$16.99</p>
+                              </center>
+                          </columns>
+                          <columns large="4">
+                              <center>
+                                  <img src="https://gallery.mailchimp.com/b6b8c26ff97a7240ec68e5e4b/images/d045ef8e-c5c3-4c91-a736-931fdec2c184.jpg" alt="item2">
+                                  <h3 class="item-name small-text-center">Item Name</h3>
+                                  <p class="item-price small-text-center">$16.99</p>
+                              </center>
+                          </columns>
+                          <columns large="4">
+                              <center>
+                                  <img src="https://gallery.mailchimp.com/b6b8c26ff97a7240ec68e5e4b/images/bbcf016c-f597-4d1a-976b-1577e79767b4.jpg" alt="item3">
+                                  <h3 class="item-name small-text-center">Item Name</h3>
+                                  <p class="item-price small-text-center">$16.99</p>
+                              </center>
+                          </columns>
+                      </row>
+                  </container>
+                  <spacer size="15"></spacer>
+                  
+                  <container class="no-bg">
+                      <row>
+                          <columns>
+                              <p class="text-right small-text-center">
+                                  <a href="#" class="basic-link tiny-text ">unsubscribe from this list</a>
+                                  <a href="#" class="basic-link tiny-text">unsubscribe from this list</a>
+                              </p>
+                          </columns>
+                      </row>
+                  </container>
+                  <spacer size="50"></spacer>
+                  
+                </center>
+            </td>
+        </tr>
+    </table>
+    
 </body>
 </html>
