Доработал работу с inky, поправил gulp файл

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -7,7 +7,7 @@
   <!-- Enables media queries -->
   <meta name="viewport" content="width=device-width"/>
   <!-- Link to the email's CSS, which will be inlined into the email -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../css/styles.css" inline>
 </head>
 <body>
   
@@ -127,7 +127,7 @@
                           </columns>
                       </row>
                   </container>
-                  <spacer size="50"></spacer>
+                  <spacer size="45"></spacer>
                   
                 </center>
             </td>
